--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -12,14 +12,19 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:name=".activity.WelcomeActivity"
+            android:label="@string/title_activity_main"
+              android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar"
+             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+             <activity  android:name=".activity.HomeActivity" ></activity>
+             <activity  android:name=".activity.GuideActivity" ></activity>
+             
     </application>
 
 </manifest>
