--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -15,8 +15,9 @@
             android:name=".activity.WelcomeActivity"
             android:label="@string/title_activity_main"
               android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"
              >
+<!--                          android:theme="@android:style/Theme.NoTitleBar" -->
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
