图片、导航栏左右图片的位置的改动

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -53,7 +53,7 @@
     
     <application
         android:name=".cache.SctnAplication"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/title"
         android:persistent="true"
