增加自定义控件 个人中心、职位搜索条目

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -76,6 +76,10 @@
              <activity  
                  android:name=".activity.GuideActivity" 
                  android:screenOrientation="portrait"></activity>
+             <activity  
+                 android:name=".activity.PersonalCenterActivity" 
+                 android:screenOrientation="portrait"></activity>
+             
              
     </application>
 
