--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -80,7 +80,10 @@
                  android:name=".activity.PersonalCenterActivity" 
                  android:screenOrientation="portrait"></activity>
              
-             
+             <activity
+                 android:name=".activity.JobSearchActivity"
+                  android:screenOrientation="portrait">
+                 ></activity>
     </application>
 
 </manifest>
