--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -89,6 +89,11 @@
                  android:name=".activity.WorkSearchActivity"
                   android:screenOrientation="portrait">
                  </activity>
+                      <activity
+                 android:name=".activity.SearchResultActivity"
+                  android:screenOrientation="portrait">
+                 </activity>
+                 
                  
     </application>
 
