--- a/sctnet/bin/AndroidManifest.xml
+++ b/sctnet/bin/AndroidManifest.xml
@@ -7,10 +7,58 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.CAMERA" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />  
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
+    
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"></uses-permission>
+     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" ></uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" />
+    
     <application
-        android:icon="@drawable/ic_launcher"
+        android:name=".cache.SctnAplication"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/title"
+        android:persistent="true"
+        android:allowBackup="true"
+       >
         <activity
             android:name=".activity.WelcomeActivity"
             android:label="@string/title_activity_main"
@@ -22,9 +70,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-             <activity  android:name=".activity.HomeActivity" ></activity>
-             <activity  android:name=".activity.GuideActivity" ></activity>
+             <activity  
+                 android:name=".activity.HomeActivity" 
+                 android:screenOrientation="portrait"></activity>
+             <activity  
+                 android:name=".activity.GuideActivity" 
+                 android:screenOrientation="portrait"></activity>
+             <activity  
+                 android:name=".activity.PersonalCenterActivity" 
+                 android:screenOrientation="portrait"></activity>
              
+             <activity
+                 android:name=".activity.JobSearchActivity"
+                  android:screenOrientation="portrait">
+                 </activity>
+                 
+                 <activity
+                 android:name=".activity.WorkSearchActivity"
+                  android:screenOrientation="portrait">
+                 </activity>
+                      <activity
+                 android:name=".activity.SearchResultActivity"
+                  android:screenOrientation="portrait">
+                 </activity>
+                 
+                 
     </application>
 
 </manifest>
