--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -89,6 +89,10 @@
                  android:name=".activity.WorkSearchActivity"
                   android:screenOrientation="portrait">
                  </activity>
+                 <activity
+                 android:name=".activity.ResumeManageActivity"
+                  android:screenOrientation="portrait">
+                 </activity>
                  
     </application>
 
