--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -94,7 +94,10 @@
                   android:screenOrientation="portrait">
                  </activity>
                    <activity android:name=".activity.SearchResultActivity" android:screenOrientation="portrait" /> 
-                 
+             
+         <activity android:name=".activity.LoginActivity" android:screenOrientation="portrait" /> 
+                   
+                   
     </application>
 
 </manifest>
