--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -7,8 +7,10 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -26,23 +28,24 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.CAMERA" >
     </uses-permission>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />  
-    
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
     </uses-permission>
-    
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"></uses-permission>
-     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" >
+    </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
     </uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" ></uses-permission>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <supports-screens
         android:anyDensity="true"
@@ -50,54 +53,59 @@
         android:normalScreens="true"
         android:resizeable="true"
         android:smallScreens="true" />
-    
+
     <application
         android:name=".cache.SctnAplication"
+        android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/title"
         android:persistent="true"
-        android:allowBackup="true"
-       >
+        android:theme="@style/title" >
         <activity
             android:name=".activity.WelcomeActivity"
             android:label="@string/title_activity_main"
-              android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"
-             >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-             <activity  
-                 android:name=".activity.HomeActivity" 
-                 android:screenOrientation="portrait"></activity>
-             <activity  
-                 android:name=".activity.GuideActivity" 
-                 android:screenOrientation="portrait"></activity>
-             <activity  
-                 android:name=".activity.PersonalCenterActivity" 
-                 android:screenOrientation="portrait"></activity>
-             
-             <activity
-                 android:name=".activity.JobSearchActivity"
-                  android:screenOrientation="portrait">
-                 </activity>
-                 
-                 <activity
-                 android:name=".activity.WorkSearchActivity"
-                  android:screenOrientation="portrait">
-                 </activity>
-                 <activity
-                 android:name=".activity.ResumeManageActivity"
-                  android:screenOrientation="portrait">
-                 </activity>
-                   <activity android:name=".activity.SearchResultActivity" android:screenOrientation="portrait" /> 
-             
-         <activity android:name=".activity.LoginActivity" android:screenOrientation="portrait" /> 
-                   
-                   
+        <activity
+            android:name=".activity.HomeActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.GuideActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.PersonalCenterActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.JobSearchActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.WorkSearchActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.ResumeManageActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.SearchResultActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ResumeEditActivity"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
