增加了简历预览、简历编辑等页面

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -106,6 +106,14 @@
             android:name=".activity.ResumeEditActivity"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name=".activity.PersonalInfoActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.ResumePreviewActivity"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
