增加了更多界面

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -140,7 +140,12 @@
             android:screenOrientation="portrait"
             >
         </activity>
-        
+      <activity 
+          android:name=".activity.MoreActivity"
+          android:screenOrientation="portrait"
+          >
+          
+      </activity>  
     </application>
 
 </manifest>
