信息咨询界面

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -146,6 +146,12 @@
           >
           
       </activity>  
+      <!-- 信息咨询Acitivity -->
+        <activity
+            android:name=".activity.InformationQueryActivity"
+            android:screenOrientation="portrait"
+            >
+        </activity>
     </application>
 
 </manifest>
