增加公司地图显示

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -254,6 +254,10 @@
         <activity
             android:name=".activity.InformationListMoreActivity"
             android:screenOrientation="portrait" >
+        </activity> 
+        <activity
+            android:name=".activity.CompanyLocationActivity"
+            android:screenOrientation="portrait" >
         </activity>        
     </application>
 
