--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -7,9 +7,11 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" ><!-- 用于评论模块分享位置信息 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+ <!-- 用于评论模块分享位置信息 -->
     </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" ><!-- 用于评论模块分享位置信息 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+ <!-- 用于评论模块分享位置信息 -->
     </uses-permission>
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -46,7 +48,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" >
     </uses-permission>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -153,7 +155,8 @@
         <!-- 薪酬调查Activity -->
         <activity
             android:name=".activity.SalarySurveyActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
         </activity>
         <!-- 选择地区Acitivity -->
         <activity
@@ -223,7 +226,7 @@
             android:name=".activity.SelectReleaseTimeActivity"
             android:screenOrientation="portrait" >
         </activity>
-         <!-- 选择职位发布时间Acitivity -->
+        <!-- 选择职位发布时间Acitivity -->
         <activity
             android:name=".activity.SelectIndustryActivity"
             android:screenOrientation="portrait" >
@@ -254,11 +257,21 @@
         <activity
             android:name=".activity.InformationListMoreActivity"
             android:screenOrientation="portrait" >
-        </activity> 
+        </activity>
+        <!-- 选择当前就职的行业 -->
+        <activity
+            android:name=".activity.SelectCurrentIndustryActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <!-- 选择当前职务 -->
+        <activity
+            android:name=".activity.SelectJobActivity"
+            android:screenOrientation="portrait" >
+        </activity>
         <activity
             android:name=".activity.CompanyLocationActivity"
             android:screenOrientation="portrait" >
-        </activity>        
+        </activity>
     </application>
 
 </manifest>
