测试结果修改 主要是分页问题、简历编辑

--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -301,6 +301,7 @@
         </activity>
         <activity
             android:name=".activity.RecruitmentActivity"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
             android:screenOrientation="portrait" >
         </activity> 
         <activity
