--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -4,8 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="7" />
 
     <permission
         android:name="com.sctn.sctnet.permission.JPUSH_MESSAGE"
@@ -284,7 +283,9 @@
         </activity>
         <activity
             android:name=".activity.CompanyLocationActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="sensor" 
+        	android:configChanges="orientation|keyboardHidden"
+             >
         </activity>
         <activity
             android:name=".activity.ArchivesListActivity"
