--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -121,7 +121,7 @@
             	则分享结束以后不能得到正确的回调
             -->
             <intent-filter>
-                <data android:scheme="tencent100371282" />
+                <data android:scheme="tencent101052206" />
 
                 <action android:name="android.intent.action.VIEW" />
 
@@ -382,6 +382,10 @@
         </activity>
         <activity
             android:name=".activity.SelectCurrentPositionActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.SalarySurveyQueryActivity"
             android:screenOrientation="portrait" >
         </activity>
 
