--- a/sctnet/AndroidManifest.xml
+++ b/sctnet/AndroidManifest.xml
@@ -403,6 +403,11 @@
             android:windowSoftInputMode="stateHidden" >
         </activity>
 
+         <activity
+            android:name=".activity.JobIntentionListActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        
         <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
